--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Sao_Paulo
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Dantas # the main title
+title: Ronaldo Dantas # the main title
 
 tagline: Docs, Tips and How-to # it will display as the sub-title
 
